# munkres-cpp

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS.txt  CMakeLists.txt  Dockerfile  README  README.md  README.rst  uncrustify.cfg
CMakeModules/: CxxGenerate.cmake  FindCxxTest.cmake
benchmarks/: CMakeLists.txt
benchmarks/tests/: CMakeLists.txt  main_celero.cpp  main_google.cpp  main_gprof.cpp  main_hayai.cpp  main_rdtsc.cpp
benchmarks/tools/generator/: CMakeLists.txt  main.cpp  matrixutils.h
cmake/: FindCeleroBenchmark.cmake  FindGoogleBenchmark.cmake  FindHayaiBenchmark.cmake
examples/: example_01.cpp  example_02.cpp  example_03.cpp  example_04.cpp  example_05.cpp  example_06.cpp  main.cpp
src/: Makefile  adapters.cpp  adapters.h  matrix.cpp  matrix.h  matrix_base.h  munkres.cpp  munkres.h
src/adapters/: CMakeLists.txt  adapter.h  armadillo_matrix.h  boost_matrix.cpp  boost_matrix.h  boostmatrixadapter.h  eigen_matrix.h  matrix_armadillo.h  matrix_qt.h  opencv_matrix.h  qt_matrix.h  raw2darray.cpp  raw2darray.h  raw_2d_array.cpp  raw_2d_array.h  std2darrayadapter.cpp  std2darrayadapter.h  std2dvectordapter.cpp  std2dvectordapter.h  std_2d_array.cpp  std_2d_array.h  std_2d_vector.cpp  std_2d_vector.h
src/munkres-cpp/: matrix.h  matrix_base.h  munkres.h  utils.h
src/munkres-cpp/adapters/: matrix_armadillo.h  matrix_boost.h  matrix_eigen.h  matrix_opencv.h  matrix_qt.h  matrix_std_2d_vector.h
tests/: CMakeLists.txt  adapterstest.cpp  matrix_test.cpp  matrix_test.h  matrixtest.cpp  matrixtest.h  munkres_test.cpp  munkrestest.cpp  singlesolution.h  utils_test.cpp  validsolution.h  warnings_test.cpp
tests/adapters/: armadillo_matrixtest.cpp  boost_matrixtest.cpp  eigen_matrixtest.cpp  matrix_armadillo_test.cpp  matrix_boost_test.cpp  matrix_eigen_test.cpp  matrix_opencv_test.cpp  matrix_qt_test.cpp  matrix_std_2d_vector_test.cpp  opencv_matrixtest.cpp  qt_matrixtest.cpp  raw_2d_arraytest.cpp  std_2d_arraytest.cpp  std_2d_vectortest.cpp
